got the buttons up and running and made good headway on the search filter

--- a/src/App.css
+++ b/src/App.css
@@ -24,4 +24,14 @@
 }
 .tablePage table{
 width: 60vw;
+margin: auto;
+}
+.botRow{
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0px;
+}
+.botRow div{
+  width: 18vw;
+
 }
